TestWebKitAPI.AsyncFunction.Promise times out on slower machines in debug builds. <rdar://problem/58445164> and https://bugs.webkit.org/show_bug.cgi?id=206012

Reviewed by Keith Miller.

Source/WebKit:

For existing API test.

* UIProcess/API/Cocoa/WKProcessPool.mm:
(-[WKProcessPool _garbageCollectJavaScriptObjectsForTesting]):
* UIProcess/API/Cocoa/WKProcessPoolPrivate.h:

Tools:

Previously, to force GC, over 30,000 function calls would be made.
This was too slow on slower machines in debug builds. It eventually would've worked given enough time, but...
It turns just a few hundred function calls with an API call to force GC seems reliable and is much faster.

* TestWebKitAPI/Tests/WebKitCocoa/AsyncFunction.mm:
(TestWebKitAPI::TEST):
(TestWebKitAPI::tryGCPromise): Deleted.


Canonical link: https://commits.webkit.org/219502@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254756 268f45cc-cd09-0410-ab3c-d52691b4dbfc